--- a/content/manager.css
+++ b/content/manager.css
@@ -19,6 +19,9 @@ body { font-family: sans-serif; font-size: 11pt; margin: 0px; padding: 0px; back
 
 img { margin: 0em; padding: 0em; border: none; }
 
+ol{ list-style: none; padding: 0; font-size: 10.5pt; color: #222;}
+ol>li{ padding: 5px; padding-bottom: 6px; padding-top: 8px;}
+
 .contact {  }
 .contact > .summary { position: relative; min-height: 52px; }
 .summary > .photo { width: 52px; height: 52px; position: absolute; border: 1px solid #aaa; }
