--- a/content/manager.css
+++ b/content/manager.css
@@ -1,75 +1,316 @@
-body { font-family: sans-serif; font-size: 11pt; margin: 0px; padding: 0px; background-color: #fff; }
+html {
+  height:100%
+}
+body { 
+  font-family: sans-serif; 
+  font-size: 11pt; 
+  margin: 0px; 
+  padding: 0px; 
+  background-color: #fff; 
+  height:100%
+}
+
+A {
+  color:#3875D7
+}
+
+.controlbar {
+  margin:0;	
+  padding:0px;
+  background: -moz-linear-gradient(top, #CECECE, #A8A8A8);
+  /*  #D7D6D5;*/
+  height:58px;
+  border-bottom:1px solid #808080; 
+  padding-left:32px;
+}
+
+.controlbutton {
+  display:inline-block;
+
+  width:84px;
+  height:49px;
+  padding-top:8px;
+  padding-left:1px;
+  padding-right:1px;
+
+  font: small-caption;
+  font-weight: normal;
+  text-align:center;
+  -moz-user-select:none;
+}
+
+.controlbutton_selected {
+  display:inline-block;
+
+  width:84px;
+  height:49px;
+  padding-top:8px;
+  
+  font: small-caption;
+  font-weight: normal;
+  text-align:center;
+
+  border-left:1px solid #909090;
+  border-right:1px solid #909090;
+  background: -moz-linear-gradient(left, #A8A8A8, #909090, #A8A8A8);
+  -moz-user-select:none;
+}
+
+.message {
+  float:right;
+  font: small-caption;
+  font-size:8pt;
+  margin-right:32px;
+}
+
+#contactpane {
+  height:85%
+}
+#contacts {
+  height:100%
+}
+
+.contactcontrols {
+  width:100%;
+  margin:0px;
+  height:34px;
+  background-color:#EDEDED;
+  border-bottom:1px solid #CECECE;
+}
+
+.controlsubhead {
+  border-bottom:1px inset #808080;
+}
+#permissionpane {
+  font:small-caption;
+  width:610px;
+  margin-left:16px;
+  margin-top:16px;
+}
+
+#permissionsTable {
+  margin-top:16px;
+}
 
 
-.contact {
+.permissionsTableHead > .sitehead {
+  width:300px;
+  font-weight:bold;
+  background-color:#E0E0E0;
+  display:inline-block;
+}
+.permissionsTableHead > .fieldhead {
+  width:300px;
+  font-weight:bold;
+  background-color:#E0E0E0;
+  display:inline-block;
+}
+
+.permissionsTableBody > .row  {
+}
+
+.permissionsTableBody > .row > .site {
+  font-weight:normal;
+  width:300px;
+  height:1.3em;
+  overflow:hidden;
+  display:inline-block;
+}
+.permissionsTableBody > .row > .field {
+  font-weight:normal;
+  width:300px;
+  height:1.3em;
+  overflow:hidden;
+  display:inline-block;
+}
+
+.searchframe {
+	display:inline-block;
+  margin-top:6px;
+  margin-left:32px;
+  font: small-caption;
+}
+
+.searchbubble {
+  padding:4px;
+	display:inline-block;
+  font: small-caption;
+  background-color:white;
+  -moz-border-radius: 1em; 
+  -moz-box-shadow: #bbb 2px 2px 1px; 
+}
+
+.searchbox {
+  border:none;
+  width:160px;
+}
+
+#contactdisplaymodes {
+  display:inline-block;
+  margin-left:40px;
+} 
+.contactdisplaymode {
+  display:inline-block;
+  border-top:1px solid white;
+  border-left:1px solid white;
+  border-right:1px solid #A0A0A0;
+  border-bottom:1px solid #A0A0A0;
+  padding-top:2px;
+}
+
+#servicepane {
+  position:relative;
+  padding-left:32px;
+  padding-top:12px;
+  width:800px;
+  font:small-caption;
+}
+
+#servicepane > a {
+  color:#3875D7
+}
+
+#servicepane > P {
+  padding-left:6px;
+}
+
+
+
+.contactcards > .contact {
   border: 1px outset #999; 
   -moz-border-radius: 0.5em; 
   padding: 0.5em; 
   margin: 0.5em; 
   width: 20em; 
   -moz-box-shadow: #bbb 2px 2px 1px; 
-	display:inline-block;
+  display:inline-block;
+/*  display:block;
+  position:absolute;
+  left:150px;
+  top:150px;*/
 	vertical-align:top;
 
 }
+.contacttable {position:relative;height:100%}
 
-.photo {max-width: 100px;}
-
-.identity {
+.contacttable > .contactlist { 
+  background-color:#F8F8F8;
+  width:200px;
+  height:100%;
+  overflow:scroll;
+}
+.contacttable > .contactlist > .contact {
+  display:block;
 }
 
-img { margin: 0em; padding: 0em; border: none; }
+.contacttable > .tabledetailpane {
+  position:absolute;left:200px;top:0px;width:350px;
+  padding-top:12px;padding-left:16px;
+  border-left:1px solid #D0D0D0;height:100%
+}
+.contacttable > .tablecontentpane {position:absolute;left:500px;top:0px;width:400px;border:none;height:100%}
 
+.contacttable > .tabledetailpane > .summary > .photo { width: 52px; height: 52px; position: absolute; border: 1px solid #aaa; }
+.contacttable > .tabledetailpane > .summary > .photo > img { margin: 0em; padding: 0em; border: 2px solid #eee; width: 48px; height: 48px; }
+.contacttable > .tabledetailpane > .summary > .information { margin-left: 54px; padding-left: 1em; }
+.contacttable > .tabledetailpane > .summary > .information > .name { color: #222; font-weight: bold; font-size: 120%;}
+.contacttable > .tabledetailpane > .summary > .information > .description { color: #999; font-size:120%}
+
+.contacttable > .tabledetailpane > .identities {position:absolute;top:80px}
+/*.contacttable > .tabledetailpane > .identities > .identity > .type, .identity > .value { white-space: nowrap; overflow: hidden; }*/
+.contacttable > .tabledetailpane > .identities > .identity > .type { position: absolute; margin-left:2px; color: #999; width: 52px; text-align: right; font-size:90%}
+.contacttable > .tabledetailpane > .identities > .identity > .value { margin-left: 54px; padding-left: 1em; font-size:100% ;}
+.contacttable > .tabledetailpane > .identities > .identity > .value > a {color:#3875D7; text-decoration:none}
+
+
+.contacttable > .contactlist > .contact {font:small-caption;line-height:1.3em;padding-left:4px;}
+.contacttable > .contactlist > .contact > .clink {text-decoration:none;color:black;}
+.contacttable > .contactlist > .contact > .clink:hover {text-decoration:underline;color:#3875D7;}
+.contacttable > .contactlist > .contact > .photocolumn {width:16px;height:16px;display:inline-block;}
+.contacttable > .contactlist > .contact > .column {margin-left:2px;width:160px;height:13px;display:inline-block;;overflow:hidden}
+
+.contactcards > .contact { min-height: 52px; }
+.contactcards > .contact > .summary { position: relative;  /*min-height: 52px;*/}
+
+.contactcards > .contact > .summary > .photo { width: 52px; height: 52px; position: absolute; border: 1px solid #aaa; }
+.contactcards > .contact > .summary > .photo > img { margin: 0em; padding: 0em; border: 2px solid #eee; width: 48px; height: 48px; }
+.contactcards > .contact > .summary > .information { margin-left: 54px; padding-left: 1em; }
+.contactcards > .contact > .summary > .information > .name { color: #222; font-weight: bold; font-size: 90%; overflow: hidden; white-space: nowrap; }
+.contactcards > .contact > .summary > .information > .description { color: #999; font-size:80%}
+
+.contactcards > .contact > .contact > .identities { /*margin-top: 1em; border-top: 1px solid #ddd; padding-top: 0.5em;*/ }
+
+.contactcards > .contact > .identities > .identity > .identity { position: relative; margin-bottom: 0.2em; }
+
+.contactcards > .contact > .identities > .identity > .type, .identity > .value { white-space: nowrap; overflow: hidden; }
+.contactcards > .contact > .identities > .identity > .type { position: absolute; margin-left:54px; color: #999; width: 52px; text-align: right; font-size:80%}
+.contactcards > .contact > .identities > .identity > .value { margin-left: 106px; padding-left: 1em; font-size:80% }
+
+.photo {max-width: 100px;}
+.identity {}
+img { margin: 0em; padding: 0em; border: none; }
+.disclosureCheckbox { float:left}
 ol{ list-style: none; padding: 0; font-size: 8.5pt; color: #222;}
 ol>li{ padding: 5px; padding-bottom: 6px; padding-top: 8px;}
 
-.contact { min-height: 52px; }
-.contact > .summary { position: relative;  /*min-height: 52px;*/}
-
-.disclosureCheckbox { float:left}
-
-.summary > .photo { width: 52px; height: 52px; position: absolute; border: 1px solid #aaa; }
-.summary > .photo > img { margin: 0em; padding: 0em; border: 2px solid #eee; width: 48px; height: 48px; }
-.summary > .information { margin-left: 54px; padding-left: 1em; }
-.summary > .information > .name { color: #222; font-weight: bold; font-size: 90%; overflow: hidden; white-space: nowrap; }
-.summary > .information > .description { color: #999; font-size:80%}
-
-.contact > .identities { /*margin-top: 1em; border-top: 1px solid #ddd; padding-top: 0.5em;*/ }
-
-.identities > .identity > .identity { position: relative; margin-bottom: 0.2em; }
-
-.identity > .type, .identity > .value { white-space: nowrap; overflow: hidden; }
-.identity > .type { position: absolute; margin-left:54px; color: #999; width: 52px; text-align: right; font-size:80%}
-.identity > .value { margin-left: 106px; padding-left: 1em; font-size:80% }
-
-#controllinks {
-	float:right;
-	font:8pt Arial;
-	margin-right:8px;
-}
-.ctllink {color:black}
 
 #importerbadges {
-	font:8pt Arial;
- float:right; padding-left:8px; padding-top:4px; padding-bottom:4px;
- background-color:white; -moz-border-radius: 0.5em;  vertical-align:top;
- }
-
-#importerlabel {
- font-size:60%; vertical-align:top;
+ font:small-caption;
+ padding-left:8px; 
+ padding-top:4px; 
+ padding-bottom:12px;
+ background-color:white; 
+ -moz-border-radius: 0.5em;  
+ vertical-align:top;
+ width:800px;
 }
 
-.importerbadge { display:inline; padding-left:8px; padding-right:8px;	-moz-user-select:none;}
-.inactiveimporter { opacity:0.25;}
+.importerbadge { 
+  position:relative;
+  display:block; 
+  padding-left:8px; 
+  padding-right:8px;
+  -moz-user-select:none;
+}
 
-.controls { margin:0;	padding:2px; 	background:#D7D6D5;	height:66px;	border-bottom:1px solid #808080; }
-/* form input {padding:2px; font-size:small; width:100%;} */
+.importerlabel {
+  position:absolute;
+  left:44px;
+  top:12px;
+  display:inline;
+  margin-bottom:6px;
+  vertical-align:center;
+}
+.importerbutton {
+  position:absolute;
+  left:450px;
+  margin-top:8px
+}
+.importerprogress {
+  position:absolute;
+  left:520px;
+  top:8px;
+  font-weight:normal;
+}
 
-.searchframe {
-	display:inline-block;padding:4px;margin-top:6px;margin-left:120px;background-color:white;-moz-border-radius: 0.5em; 
+#importerprogressbox {
+  position:absolute;
+  display:none;
+  left:0px;
+  top:16px;
+  background-color:white;
+  border:1px solid black;
+  opacity:0.9;
+  width:128px;
+  margin-left:16px;
+  margin-right:16px;
+  padding-top:4px;
+  padding-left:4px;
+  height:32px;
+  -moz-border-radius: 0.5em; 
   -moz-box-shadow: #bbb 2px 2px 1px; 
 }
 
-.message {font-size:12pt;margin-left:32px;margin-right:32px;}
-.searchbox {border:none;width:100px;}
+.controls { margin:0;	padding:2px; 	background:#D7D6D5;	height:66px;	border-bottom:1px solid #808080; }
+/* form input {padding:2px; font-size:small; width:100%;} */
 
