--- a/content/manager.css
+++ b/content/manager.css
@@ -208,6 +208,9 @@ ol>li{ padding: 5px; padding-bottom: 6px; padding-top: 8px;}
   left:16px;
   margin-top:100px;
 }
+.discovererprogress {
+  font-weight:normal;
+}
 .discovererbadge {
   font:small-caption;
 }
