--- a/content/manager.css
+++ b/content/manager.css
@@ -6,13 +6,16 @@ body {
   font-size: 11pt; 
   margin: 0px;
   padding: 0px; 
-  background-color: #fff; 
+  background-color: #EDEDED; 
   height:100%
 }
 
 A {
   color:#3875D7
 }
+
+scrollbar {-moz-opacity: 0.3 !important;}
+scrollbar:hover {-moz-opacity: 1.0 !important;}
 
 .controlbar {
   margin:0;	
@@ -25,11 +28,8 @@ A {
 
 .controlbutton {
   display:inline-block;
-  width:84px;
-  height:49px;
-  padding-top:8px;
-  padding-left:1px;
-  padding-right:1px;
+  height:48px;
+  padding:4px 8px;
   font: small-caption;
   font-weight: normal;
   text-align:center;
@@ -38,15 +38,12 @@ A {
 
 .controlbutton_selected {
   display:inline-block;
-  width:84px;
-  height:49px;
-  padding-top:8px;
+  height:48px;
+  padding:4px 8px;
   font: small-caption;
   font-weight: normal;
   text-align:center;
-  border-left:1px solid #909090;
-  border-right:1px solid #909090;
-  background: -moz-linear-gradient(left, #A8A8A8, #909090, #A8A8A8);
+  background: url('images/pref-selected-left.png') no-repeat top left, url('images/pref-selected-right.png') no-repeat top right, -moz-linear-gradient(top, rgba(0,0,0,0) 5%, rgba(0,0,0,0.2) 40%, rgba(0,0,0,0.2) 60%, rgba(0,0,0,0) 95%);
   -moz-user-select:none;
 }
 
@@ -61,56 +58,90 @@ A {
 
 .contactcontrols {
   width:100%;
+  position: relative;
   margin:0px;
-  height:34px;
+  height:42px;
   background-color:#EDEDED;
-  border-bottom:1px solid #CECECE;
 }
 
 .controlsubhead {
   padding-top:8px;
   border-bottom:1px inset #808080;
+  font-size: 24px;
+  margin: 10px 0px;
 }
 
 .searchframe {
-	display:inline-block;
-  margin-top:6px;
-  margin-left:32px;
+  position: absolute;
+  top: 6px;
+  display:inline-block;
+   margin-left:30px;
   font: small-caption;
 }
 
 .searchbubble {
-  padding:4px;
-	display:inline-block;
+  display:inline-block;
   font: small-caption;
-  background-color:white;
-  -moz-border-radius: 1em; 
-  -moz-box-shadow: #bbb 2px 2px 1px; 
+  background-color: rgba(255,255,255,1);
+  border: 0;
+    color: rgba(255,255,255,0.8);
+    text-shadow: black 0 1px;
+    width: 160px;
+    border: 1px solid rgba(0,0,0,0.3);
+   	-moz-border-radius: 0.3em;
+	-moz-box-shadow:
+		inset rgba(0,0,0,0.2) 0px 1px 2px; 
+	padding: 4px 4px 4px 6px; 
+	margin: 2px 0 0 0;
 }
 
 .searchbox {
   border:none;
-  width:160px;
+  background-color: transparent;
+  width:140px;
 }
 
 #contactdisplaymodes {
+  position: absolute;
+  top: 6px;
   display:inline-block;
-  margin-left:40px;
+  margin-left:300px;
 } 
 .contactdisplaymode {
   display:inline-block;
-  border-top:1px solid white;
-  border-left:1px solid white;
-  border-right:1px solid #A0A0A0;
-  border-bottom:1px solid #A0A0A0;
-  padding-top:2px;
+  font: small-caption;
+  background-color: rgba(255,255,255,1);
+  color: rgba(255,255,255,0.8);
+  text-shadow: black 0 1px;
+  -moz-border-radius: 0.3em;
+  border: 1px solid rgba(185,185,185,1);
+	-moz-box-shadow: 
+		inset rgba(255, 255, 255, 0.5) 0 1px 0px,
+		inset rgba(0, 0, 0, 0.1) 0 -2px 0px,
+		rgba(0, 0, 0, 0.1) 0px 2px 0px; 
+  padding: 4px; 
+  margin: 0;
 }
 
+.contactdisplaymode img{
+ opacity: 0.6;
+ -moz-transition-property: opacity;
+ -moz-transition-duration: 0.5s;
+ -moz-transition-timing-function: ease-out;
+}
+
+.contactdisplaymode img:hover{
+ opacity: 1;
+ -moz-transition-property: opacity;
+ -moz-transition-duration: 0.5s;
+ -moz-transition-timing-function: ease-out;
+}
 
 #contacts {
   position:absolute;height:auto;
   bottom:0;left:0;top:0;right:0;
-  margin-top:92px;width:200px
+  margin-top:100px;
+  background-color:#EDEDED;
 }
 
 /******* Contacts Display: Table View ******/
@@ -119,14 +150,15 @@ A {
 #contactdetail {
   position:absolute;height:auto;
   bottom:0;left:0;top:0;right:0;
-  margin-top:92px;margin-left:200px;
+  margin-top:100px;margin-left:200px;
+  background-color: transparent;
 }
 
 .contacttable > .contactlist { 
-  background-color:#F8F8F8;
+  background-color:#EDEDED;
   width:200px;
   height:100%;
-  overflow-y:scroll;
+  overflow-y:auto;
   overflow-x:hidden;
 }
 .contacttable > .contactlist > .contact {
@@ -159,22 +191,40 @@ A {
 
 .tabledetailpane > .identities > .fieldheader {width:112px;margin-left:40px;text-align:left;font-size:80%;font-weight:bold;padding-top:8px;border-bottom:1px solid #F8F8F8}
 
-.contacttable > .contactlist > .contact {font:small-caption;line-height:1.3em;padding-left:4px;}
-.contacttable > .contactlist > .contact > .clink {text-decoration:none;color:black;}
+.contacttable > .contactlist > .contact {font:small-caption; padding-left:6px; height: 24px; position: relative; padding-top: 3px; padding-bottom:3px; border-bottom: 2px solid #fff; -moz-border-bottom-colors:rgba(200,200,200,0.5) rgba(255,255,255,0.5); background-color: transparent;}
+.contacttable > .contactlist > .contact:hover {background-color: #ffffff;}
+.contacttable > .contactlist > .contact > .clink {text-decoration:none;color:black; padding-left: 30px; padding-top: 4px; line-height:1em; position: absolute; top: 0px; left: 0px; width: 170px; height: 26px; display: inline-block; }
 .contacttable > .contactlist > .contact > .clink:hover {text-decoration:underline;color:#3875D7;}
+.contacttable > .contactlist > .contact > .clink:active {text-decoration:underline;color:#3875D7; border: none;}
 .contacttable > .contactlist > .contact > .photocolumn {width:16px;height:16px;display:inline-block;}
-.contacttable > .contactlist > .contact > .column {margin-left:2px;width:160px;height:13px;display:inline-block;;overflow:hidden}
+.contacttable > .contactlist > .contact > .column {margin-left:2px;width:200px;height:13px;display:inline-block;;overflow:hidden}
 
+.contacttable > .contactlist > .contact img{
+ opacity: 0.4;
+ -moz-transition-property: opacity;
+ -moz-transition-duration: 0.5s;
+ -moz-transition-timing-function: ease-out;
+}
+.contacttable > .contactlist > .contact:hover img{
+ opacity: 1;
+ -moz-transition-property: opacity;
+ -moz-transition-duration: 0.5s;
+ -moz-transition-timing-function: ease-out;
+}
 
 /******* Contact Cards *******/
 
 .contactcards > .contact {
-  border: 1px outset #999; 
-  -moz-border-radius: 0.5em; 
-  padding: 0.5em; 
+  padding: 16px; 
   margin: 0.5em; 
   width: 20em; 
-  -moz-box-shadow: #bbb 2px 2px 1px; 
+  -moz-border-radius: 1em; 
+  background-color: rgba(255,255,255,1);
+  border: 1px solid rgba(185,185,185,1);
+	-moz-box-shadow: 
+		inset rgba(255, 255, 255, 0.5) 0 1px 0px,
+		inset rgba(0, 0, 0, 0.1) 0 -3px 0px,
+		rgba(0, 0, 0, 0.1) 0px 2px 0px;
   display:inline-block;
 	vertical-align:top;
 }
@@ -182,8 +232,8 @@ A {
 .contactcards > .contact { min-height: 52px; }
 .contactcards > .contact > .summary { position: relative;  /*min-height: 52px;*/}
 
-.contactcards > .contact > .summary > .photo { width: 52px; height: 52px; position: absolute; border: 1px solid #aaa; }
-.contactcards > .contact > .summary > .photo > img { margin: 0em; padding: 0em; border: 2px solid #eee; width: 48px; height: 48px; }
+.contactcards > .contact > .summary > .photo { width: 52px; height: 52px; position: absolute;}
+.contactcards > .contact > .summary > .photo > img { margin: 0em; padding: 0em; width: 48px; height: 48px; }
 .contactcards > .contact > .summary > .information { margin-left: 54px; padding-left: 1em; }
 .contactcards > .contact > .summary > .information > .name { color: #222; font-weight: bold; font-size: 90%; overflow: hidden; white-space: nowrap; }
 .contactcards > .contact > .summary > .information > .description { color: #999; font-size:80%}
@@ -311,39 +361,60 @@ ol>li{ padding: 5px; padding-bottom: 6px; padding-top: 8px;}
 #servicepane > a { color:#3875D7 }
 #servicepane > P { padding-left:6px; }
 
+.contactsLogo {
+	float: right;
+	margin-top: -30px;
+}
 
-
+#servicesHeader {
+  background-color: rgba(255,255,255,1);
+  padding: 16px;
+  -moz-border-radius: 1em; 
+  background-color: rgba(255,255,255,1);
+  border: 1px solid rgba(185,185,185,1);
+	-moz-box-shadow: 
+		inset rgba(255, 255, 255, 0.5) 0 1px 0px,
+		inset rgba(0, 0, 0, 0.1) 0 -3px 0px,
+		rgba(0, 0, 0, 0.1) 0px 2px 0px;
+}
 
 .importerbadge { 
   position:relative;
   display:block; 
-  padding-left:8px; 
-  padding-right:8px;
+  padding: 4px 8px;
+  margin-bottom: 8px;
   -moz-user-select:none;
+  -moz-border-radius: 1em; 
+  background-color: rgba(255,255,255,1);
+  border: 1px solid rgba(185,185,185,1);
+	-moz-box-shadow: 
+		inset rgba(255, 255, 255, 0.5) 0 1px 0px,
+		inset rgba(0, 0, 0, 0.1) 0 -3px 0px,
+		rgba(0, 0, 0, 0.1) 0px 2px 0px;
 }
 
 .importerlabel {
   position:absolute;
-  left:44px;
+  left:54px;
   top:12px;
   display:inline;
   margin-bottom:6px;
 }
 .importerbutton {
   position:absolute;
-  left:450px;
-  margin-top:8px
+  left:350px;
+  top:10px;
 }
 .importersubbutton {
   position:absolute;
-  top:8px;
-  left:735px;
+  top:10px;
+  left:685px;
 }
 .importerprogress {
   position:absolute;
-  left:535px;
+  left:435px;
   width:265px;
-  top:8px;
+  top:12px;
   font-weight:normal;
   color:#909090;
 }
