--- a/content/disclosure.css
+++ b/content/disclosure.css
@@ -1,5 +1,8 @@
 body { font-family: sans-serif; font-size: 11pt; margin: 0px; padding: 0px; background-color: #fff; }
 
+a:hover {
+  cursor: pointer;
+}
 
 .contact {
   border: 1px outset #999; 
