--- a/content/manager.css
+++ b/content/manager.css
@@ -10,11 +10,11 @@ body {
   height:100%
 }
 
-A {
+a {
   color:#3875D7
 }
 a:hover {
-  cursor: pointer;
+  cursor:pointer;
 }
 
 scrollbar {-moz-opacity: 0.3 !important;}
@@ -167,13 +167,19 @@ scrollbar:hover {-moz-opacity: 1.0 !important;}
 .contacttable > .contactlist > .contact {
   display:block;
 }
+.contacttable > .contactlist > .group {
+  display:block;
+}
+.contacttable > .contactlist > .groupseparator {
+  height: 2px; border-bottom: 2px solid #fff; -moz-border-bottom-colors:rgba(200,200,200,0.5) rgba(255,255,255,0.5); background-color: #DDDDDD;
+}
 
 .tabledetailpane {
   width:auto;
   height:100%;
   padding-left:0px;
 /*  padding-top:16px;*/
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 
 }
@@ -194,9 +200,16 @@ scrollbar:hover {-moz-opacity: 1.0 !important;}
 
 .tabledetailpane > .identities > .fieldheader {width:112px;margin-left:40px;text-align:left;font-size:80%;font-weight:bold;padding-top:8px;border-bottom:1px solid #F8F8F8}
 
-.contacttable > .contactlist > .contact {font:small-caption; padding-left:6px; height: 24px; position: relative; padding-top: 3px; padding-bottom:3px; border-bottom: 2px solid #fff; -moz-border-bottom-colors:rgba(200,200,200,0.5) rgba(255,255,255,0.5); background-color: transparent;}
+.contacttable > .contactlist > .contact {font:small-caption; padding-left:6px; height: 18px; position: relative; padding-top: 3px; padding-bottom:3px; border-bottom: 2px solid #fff; -moz-border-bottom-colors:rgba(200,200,200,0.5) rgba(255,255,255,0.5); background-color: transparent;}
 .contacttable > .contactlist > .contact:hover {background-color: #ffffff;}
-.contacttable > .contactlist > .contact > .clink {text-decoration:none;color:black; padding-left: 30px; padding-top: 4px; line-height:1em; position: absolute; top: 0px; left: 0px; width: 170px; height: 26px; display: inline-block; }
+
+.contacttable > .contactlist > .group {font:small-caption; padding-left:6px; height: 18px; position: relative; padding-top: 3px; padding-bottom:3px; border-bottom: 2px solid #fff; -moz-border-bottom-colors:rgba(200,200,200,0.5) rgba(255,255,255,0.5); background-color: transparent;}
+.contacttable > .contactlist > .group:hover {background-color: #ffffff;}
+.contacttable > .contactlist > .group > .clink {text-decoration:none;color:black; padding-left: 30px; padding-top: 4px; line-height:1em; position: absolute; top: 0px; left: 0px; width: 170px; height: 18px; display: inline-block; }
+.contacttable > .contactlist > .group > .clink:hover {text-decoration:underline;color:#3875D7;}
+.contacttable > .contactlist > .group > .clink:active {text-decoration:underline;color:#3875D7; border: none;}
+
+.contacttable > .contactlist > .contact > .clink {text-decoration:none;color:black; padding-left: 30px; padding-top: 4px; line-height:1em; position: absolute; top: 0px; left: 0px; width: 170px; height: 18px; display: inline-block; }
 .contacttable > .contactlist > .contact > .clink:hover {text-decoration:underline;color:#3875D7;}
 .contacttable > .contactlist > .contact > .clink:active {text-decoration:underline;color:#3875D7; border: none;}
 .contacttable > .contactlist > .contact > .photocolumn {width:16px;height:16px;display:inline-block;}
