--- a/content/person.css
+++ b/content/person.css
@@ -65,6 +65,12 @@ a:hover {
   width: 64px; 
   height: 64px; 
 }
+.listedPhoto {
+	border: 15px solid #fff;
+	border-bottom: 65px solid #fff;
+	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+	-moz-transform: rotate(1deg);
+}
 
 .displayName {
   font:caption;
