--- a/content/person.css
+++ b/content/person.css
@@ -8,10 +8,12 @@ body {
 }
 
 a {
-  color:#3875D7
+  color:#3875D7;
+  text-decoration:none;
 }
 a:hover {
   cursor: pointer;
+  text-decoration:underline;
 }
 
 .spinner {
@@ -53,6 +55,9 @@ a:hover {
 		inset rgba(0, 0, 0, 0.1) 0 -3px 0px,
 		rgba(0, 0, 0, 0.1) 0px 2px 0px;
 }
+.contactMethods {
+  margin-left:0px;
+}
 
 .photo {
   width: 68px; 
@@ -66,10 +71,7 @@ a:hover {
   height: 64px; 
 }
 .listedPhoto {
-	border: 15px solid #fff;
-	border-bottom: 65px solid #fff;
-	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-	-moz-transform: rotate(1deg);
+
 }
 
 .displayName {
@@ -78,16 +80,25 @@ a:hover {
   font-size:120%;
   font-weight:bold;
   padding-bottom:16px;
+  min-height:40px;
 }
 
 .vlist_title {
   font:small-caption;
+/*  border-bottom:1px dotted #808080;*/
+}
+
+.subsecHead {
+  width:400px;
+  margin-left:74px;
+  font:small-caption;
+  margin-bottom:4px;
   border-bottom:1px dotted #808080;
 }
 
 .vlist {
-  margin-left:74px;
-  padding-bottom:16px;
+/*  margin-left:74px;*/
+  padding-bottom:8px;
   width:auto;
 }
 .photolist {
@@ -162,6 +173,9 @@ a:hover {
 }
 
 .updatefavicon {
+  padding-right:4px;
+}
+.valuefavicon {
   padding-right:4px;
 }
 
